Update project documentation and add missing features tracking
- Updated .gitignore with additional patterns
- Enhanced PROGRESS_PROMPTS.md with latest development milestones
- Added comprehensive project documentation:
  - PROJECT_CONTEXT.md: Complete project overview and architecture
  - MISSING_FEATURES.md: Tracking of remaining features to implement
  - TB_STRATEGY.md: TerraBlender integration strategy
  - Checklist: Development checklist for quality assurance
- Added research and design documents:
  - Planet Design doc: Detailed planet design specifications
  - Research: Technical research and implementation notes
  - Ring_world implementation: Ringworld-specific implementation details
  - Architecturary: Architecture documentation and patterns

This commit consolidates all project documentation and provides a comprehensive reference for future development sessions.

--- a/.gitignore
+++ b/.gitignore
@@ -39,15 +39,7 @@ bin/
 .vscode/
 
 ### Mac OS ###
-.DS_Store# Project planning / AI-generated docs
-Architecturary
-PROJECT_CONTEXT.md
-TB_STRATEGY.md
-MISSING_FEATURES.md
-Checklist
-Research
-Planet Design doc
-Ring_world implemetation
+.DS_Store#
 temp_density_functions/
 temp_jei_files/
 run/
