Fix .gitignore file and improve coverage
- Fixed .DS_Store# typo (removed extra #)
- Added comprehensive runtime file patterns (*.log, crash-reports/, saves/, eula.txt)
- Added additional build artifact patterns (*.tmp, *.temp, *.swp, *.swo, *~)
- Organized sections better with clear headers
- Verified all important Gradle files remain tracked
- Confirmed build directories are properly ignored
- Source files continue to be tracked correctly

The .gitignore now provides better coverage while ensuring no important project files are accidentally ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,21 @@ bin/
 .vscode/
 
 ### Mac OS ###
-.DS_Store#
+.DS_Store
+
+### Runtime and Temporary Files ###
 temp_density_functions/
 temp_jei_files/
 run/
+*.log
+*.log.*
+crash-reports/
+saves/
+eula.txt
+
+### Additional Build Artifacts ###
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
